--- a/ApplePie/Base.lproj/Main.storyboard
+++ b/ApplePie/Base.lproj/Main.storyboard
@@ -17,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Uwe-Wl-0ZS">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Uwe-Wl-0ZS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="SXo-Wy-KRo"/>
+                            <constraint firstItem="Uwe-Wl-0ZS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Z5J-of-Yy3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uwe-Wl-0ZS" secondAttribute="trailing" id="bCt-8f-FgR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Uwe-Wl-0ZS" secondAttribute="bottom" id="rNN-9t-Uke"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
